<resources>
    <string name="app_name">Smart_Storage</string>
    <string name="add_item">Add Item</string>
    <string name="all_food_list">My Food List</string>
    <string name="fridge">Fridge</string>
    <string name="freezer">Freezer</string>
    <string name="pantry">Pantry</string>
    <string name="Line">__________________________________________________________________________</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="where_will_the_item_be_stored">Where will the item be stored?</string>
    <string name="enter_item">Enter Item</string>
    <string name="done">Done!</string>
    <string name="enter_expiration_date">Enter Expiration Date</string>
    <string name="date">Date</string>
    <string name="textview">Storage Type</string>
    <string name="textview2">Expiration Date</string>
    <string name="remove_item">Remove Item</string>
</resources>
